# servicecraft

./: .env.example  .gitignore  CLAUDE.md  FUNCTIONALITY.md  PLAN-agent-chat-voice.md  README.md  VETKB_FINAL_DESIGN.md  docker-compose.local-gpu.yml  docker-compose.yml  livekit.yaml  price-tree.yaml
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/agent/: agent.go  ollama.go  yandex.go
backend/internal/config/: config.go  inference.go
backend/internal/database/: database.go
backend/internal/handlers/: agent.go  analytics.go  article.go  article_version.go  auth.go  batch.go  comment.go  company.go  export.go  faq.go  health.go  pipeline.go  price.go  profile.go  questions.go  search.go  webhook.go  yclients.go
backend/internal/middleware/: auth.go  cors.go  logging.go  ratelimit.go
backend/internal/models/: article.go  article_version.go  audit.go  chat.go  comment.go  company.go  faq.go  question.go  transcription_cache.go  tts_cache.go  user.go  webhook.go
backend/internal/pipeline/: bm25.go  embeddings.go  local_embeddings.go  local_stt.go  pipeline.go  prompts.go  qdrant.go  replicate.go
backend/internal/services/: article.go  article_version.go  audit.go  auth.go  chat.go  comment.go  company.go  (+6 more)
eval/: eval_rag.py  requirements.txt  update_analytics.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.css  main.tsx
scripts/: setup_models.sh
voice-agent/: AUDIT.md  Dockerfile  agent.py  pyproject.toml  rag.py  reindex.py  server.py
(+29 files in other folders)
