[project]
name = "voice-agent"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-silero>=1.0.0",
    "livekit-plugins-turn-detector>=1.0.0",
    "fastembed>=0.4.0",
    "aiohttp>=3.11.0",
    "requests>=2.32.0",
    "numpy>=1.26.0",
]
